ingress-config/external-dns.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:base64", "base64")
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: k8s.gcr.io/external-dns/external-dns:v0.7.1
        args:
        - --source=service
        - --source=ingress
        - #@ "--domain-filter=" + str(data.values.ingress.domain)
        - --provider=aws
        - --aws-zone-type=public # Looks only at public hosted zones. Valid values are public, private, or no value for both.
        - --aws-prefer-cname
        - --policy=upsert-only
        - --txt-prefix=txt 
        - #@ "--txt-owner-id=" + str(data.values.aws.zoneId)  
        - --registry=txt
